# calc_APV_blocking

./: CMakeLists.txt  README.md
compile/: CMakeCache.txt  Makefile  area_wgt_manager.mod  cmake_install.cmake  main  nml_manager.mod
postprocess/: get_DJFM.ncl  get_summer.ncl  get_summer_temp.ncl  get_winter.ncl
preprocess/: cal_pv_anomaly.ncl  cal_pv_anomaly_remove_constant_mean.ncl
run/: namelist_ncep_6h
src/: array_manager.F90  main.F90  nml_manager.F90
